# play-with-gql

./: .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml
play_with_gql/: asgi.py  schema.py  settings.py  urls.py  views.py  wsgi.py
play_with_gql/api/: test.py
play_with_gql/api/libraries/: mutations.py  nodes.py  permissions.py  queries.py
play_with_gql/libraries/: apps.py
play_with_gql/libraries/admin/: author_admin.py  book_admin.py  library_admin.py
play_with_gql/libraries/factories/: __init__.py  author_factory.py  book_factory.py  library_factory.py
play_with_gql/libraries/migrations/: 0002_author.py  0003_book.py  0004_alter_book_author_alter_book_library.py  0005_librarian.py
play_with_gql/libraries/models/: __init__.py  book.py  librarian.py
play_with_gql/users/: admin.py  apps.py
play_with_gql/users/fixtures/: users.json
play_with_gql/users/migrations/: 0001_initial.py  0002_load_fixtures.py
